--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,13 @@
-<h1>{{message}}</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset = "utf-8">
+    {% if title %}
+    <title>{{title}}</title>
+    {%  else %}
+    <title>Pitch Up</title>
+    {% endif %}
+  </head>
+  <body>
+  </body>
+</html>
