--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,5 +9,11 @@
     {% endif %}
   </head>
   <body>
+    <h1>Interview Pitch</h1>
+    <h1>Pick Up lines</h1>
+    <h1>Product</h1>
+    <h1>PromotionPich</h1>
+    <h1>Gossip</h1>
+    <h1>One Minute</h1>
   </body>
 </html>
