imported macros in index

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset = "utf-8">
-    {% if title %}
-    <title>{{title}}</title>
-    {%  else %}
-    <title>Pitch Up</title>
-    {% endif %}
-  </head>
-  <body>
-    <h1>Interview Pitch</h1>
-    <h1>Pick Up lines</h1>
-    <h1>Product</h1>
-    <h1>PromotionPich</h1>
-    <h1>Gossip</h1>
-    <h1>One Minute</h1>
-  </body>
-</html>
+{% import macros.html as macro %}
