--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,4 @@
-{% macrodisplayPitch_list %}{% for pitch in pitch_list %}
+{% macro displayPitch_List %}{% for pitch in pitch_list %}
 <div>
   <h2>{{pitch.name}}</h2>
   <h3>{{pitch.description}}</h3>
